# box

./: .gitignore  LICENSE  README.md  utputFormat
backend/: pyproject.toml  requirements.txt
backend/backend/: .prod.env  settings.py
backend/backend/app/: MyBox.py  api.py  box_router.py  diagram.py  scenario.py
backend/tests/: test_box.py  test_status.py
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/components/FormRHF/: FormRHF.jsx
