[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jony67 <vasyapupckin@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
transitions = "^0.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
httpx = "^0.25.0"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
